<resources>
    <string name="app_name">Movie App complete</string>
    <string name="sort_favorite">Favorite</string>
    <string name="trailer">Trailer</string>
    <string name="des">des</string>
    <string name="user_rating_label">Rating</string>
    <string name="release_date_label">Release Date</string>
    <string name="synopsis_label">Synopsis</string>
    <string name="trailers_label">Trailer</string>
    <string name="reviews_label">Reviews</string>
    <string name="sort_most_popular">Most Popular</string>
    <string name="sort_top_rated">Top Rated</string>
    <string name="api_key"></string>
    <string name="Error_NoMovieData" />
</resources>
